syntax = "proto3";

message KeyPair {
   bytes secretKey = 1;
   bytes publicKey = 2;
}

message NonceList {
    repeated bytes nonces = 1;
}
