syntax = "proto3";

message SharedSecret {
   bytes rx = 1;
   bytes tx = 2;
}
